# GHA-OIDC-Secret

./: .gitignore  README.md  pyproject.toml
.github/workflows/: oidc-demo.yml
src/gha_oidc_secret/: __init__.py  server.py
